weather-deploy/resources/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    deployment: weather-app
  sessionAffinity: None
  type: ClusterIP
